# msft-recon-rs

./: .gitignore  .windsurfrules  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  specficiation.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust-ci.yml
config/: default.toml  test_config.toml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  output.rs
src/recon/: aad.rs  azure_svc.rs  client.rs  dns.rs  m365.rs  mod.rs  tenant.rs
tests/: cli_tests.rs
